[tool.poetry]
name = "advertise-finder-telegram-bot"
version = "0.1.0"
description = "Telegram Bot for advertise and find the telegram user"
authors = ["sulemanahmedrajput <sulemanahmed2704@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pycountry = "^24.6.1"
python-telegram-bot = "^21.10"
solders = ">=0.23.0,<0.24.0"
solana = "^0.36.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
